Update comment for fetching options chains

--- a/main.ipynb
+++ b/main.ipynb
@@ -36,7 +36,7 @@
     "expirations = ticker.options\n",
     "print(f\"Found {len(expirations)} expiration dates. First 5: {expirations[:5]}\")\n",
     "\n",
-    "# Fetch the Chain for ALL expirations (This might take 30-60 seconds)\n",
+    "# Fetch the Chain for ALL expirations\n",
     "options_data = []\n",
     "print(\"Fetching options chains\")\n",
     "\n",
